Updated content on start page

--- a/app/views/v1/index.html
+++ b/app/views/v1/index.html
@@ -2,7 +2,7 @@
 
 
 {% block pageTitle %}
-  EU Direct Bid funds: UK recipient registration instructions - GOV.UK
+  Register as an organisation which gets funding directly from the EU - GOV.UK
 {% endblock %}
 
 
@@ -30,22 +30,28 @@
 
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl">Register as an organisation which gets EU direct bid funding</h1>
+      <h1 class="govuk-heading-xl">Register as an organisation which gets funding directly from the EU</h1>
 
-      <p class="govuk-body">This page is for UK grant recipients who:</p>
+      <p class="govuk-body">You should register if you receive or have applied for funding from:</p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li>are in receipt of funding from at least one of the funds below</li>
-        <li>have submitted a bid to one of the funds below</li>
-        <li>do not know if their bid will be awarded</li>
-        <li>have been awarded a grant, but do not presently have a grant agreement number</li>
+        <li>Civil Protection Mechanism</li>
+        <li>Competitiveness of Small and Medium-Sized Enterprises (COSME)</li>
+        <li>Connecting Europe Facility (CEF) telecoms</li>
+        <li>Creative Europe</li>
+        <li>Employment and Social Innovation (EaSI)</li>
+        <li>Erasmus+</li>
+        <li>Europe for Citizens</li>
+        <li>European Solidarity Corps</li>
+        <li>Health for Growth</li>
+        <li>Rights, Equality, and Citizenship Programme (RECP)</li>
       </ul>
 
       <p>Do not register if:</p>
       <ul class="govuk-list govuk-list--bullet">
-        <li>you receive or have applied for funding from a different EU programme - <a href="#">check what you need to do instead</a></li>
+        <li>you receive or have applied for funding from a different EU programme, such as Horizon 2020 - <a href="https://www.gov.uk/guidance/european-and-domestic-funding-after-brexit">check what you need to do instead</a></li>
         <li>you’re already in contact with a government department about what will happen to your funding after Brexit</li>
-        <li>your project will have finished before Brexit but the final payment will come after Brexit - contact <a href="mailto: helpdesk.grants.registration@cabinetoffice.gov.uk">helpdesk.grants.registration@cabinetoffice.gov.uk</a> if you’re told that you will not receive the final payment</li>
+        <li>your project will have finished before Brexit but the final payment will come after Brexit - <a href="mailto: helpdesk.grants.registration@cabinetoffice.gov.uk">contact the helpdesk</a> if you’re told that you will not receive the final payment</li>
       </ul>
 
       <p class="govuk-body">Registering takes around 10 minutes.</p>
@@ -62,13 +68,12 @@
       <p>To register you need:</p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li>your Companies House or Charities Commission number</li>
+        <li>your Companies House or Charity Commission number, if you have one</li>
         <li>details from your grant agreement, if you have one</li>
       </ul>
 
-      <p>If you do not have a grant agreement, fill in as much of the information as possible and provide an explanation as to why in the ‘Additional Comments’ section.</p>
-      <p>If you are a recipient of multiple funds, complete separate templates for each fund (e.g. recipient of both Europe for Citizens and EaSI).</p>
-      <p>If you have questions about funding, <a href="mailto:helpdesk.grants.registration@cabinetoffice.gov.uk" rel="external">contact the Cabinet Office Grants Management Function</a> dealing with it.</p>
+      <p>If you do not have a grant agreement, fill in as much information as you can.</p>
+      <p>You’ll need to register again if you receive more than one fund.</p>
 
     </div>
 
