Modified breadcrumb links

--- a/app/views/v1/index.html
+++ b/app/views/v1/index.html
@@ -11,14 +11,11 @@
     items: [
       {
         text: "Home",
-        href: "#"
+        href: "https://www.gov.uk"
       },
       {
         text: "Funding programmes",
-        href: "#"
-      },
-      {
-        text: "EU Direct Bid funds"
+        href: "https://www.gov.uk/topic/government/government-funding-programmes"
       }
     ]
   }) }}
