Content changes, route changes and page additions

--- a/app/views/v1/index.html
+++ b/app/views/v1/index.html
@@ -55,7 +55,7 @@
 
       {{ govukButton({
         text: "Start now",
-        href: "/v1/contact-information",
+        href: "/v1/who-should-we-contact-about-the-grant-award",
         classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8",
         isStartButton: true
       }) }}
