--- a/app/views/v1/organisation-details.html
+++ b/app/views/v1/organisation-details.html
@@ -31,7 +31,7 @@
             classes: "govuk-label--s"
           },
           hint: {
-            text: "Provide the organisation name as it appears on your grant agreement."
+            text: "Enter the name as it appears on the grant agreement"
           },
           id: "organisation-name",
           name: "organisation-name",
