--- a/app/views/v1/who-should-we-contact-about-the-grant-award.html
+++ b/app/views/v1/who-should-we-contact-about-the-grant-award.html
@@ -2,7 +2,7 @@
 
 
 {% block pageTitle %}
-  Contact information - GOV.UK
+  Who should we contact about the grant award? - GOV.UK
 {% endblock %}
 
 
@@ -20,9 +20,9 @@
 
   <div class="govuk-grid-column-two-thirds">
 
-    <h1 class="govuk-heading-xl">Contact information</h1>
+    <h1 class="govuk-heading-xl">Who should we contact about the grant award?</h1>
 
-    <p>Who is the most appropriate person for us to contact about your grants award? We recommend your Legal Entity Appointed Representative (LEAR).</p>
+    <p>We recommend your Legal Entity Appointed Representative (LEAR).</p>
 
     <form method="post">
 
@@ -61,7 +61,7 @@
           classes: "govuk-label--s"
         },
         hint: {
-          text: "We’ll only use this to send you a receipt"
+          text: "We’ll only use this to contact you about the grant award"
         },
         id: "email-address",
         name: "email-address",
@@ -77,7 +77,7 @@
       <!-- Telephone number -->
       {{ govukInput({
         label: {
-          text: "UK telephone number",
+          text: "Telephone number",
           classes: "govuk-label--s"
         },
         id: "telephone-number",
