--- a/app/views/v1/check-your-answers.html
+++ b/app/views/v1/check-your-answers.html
@@ -2,14 +2,14 @@
 
 
 {% block pageTitle %}
-  Check your answers before sending your application - GOV.UK
+  Check your answers - GOV.UK
 {% endblock %}
 
 
 {% block beforeContent %}
 {{ govukBackLink({
   text: "Back",
-  href: "/v1/funding-details"
+  href: "/v1/project-details"
 }) }}
 {% endblock %}
 
@@ -19,11 +19,11 @@
 
     <div class="govuk-grid-column-two-thirds-from-desktop">
 
-      <h1 class="govuk-heading-xl">Check your answers before sending your application</h1>
+      <h1 class="govuk-heading-xl">Check your answers</h1>
 
 
-      <!-- Contact information -->
-      <h2 class="govuk-heading-m">Contact infomation</h2>
+      <!-- Who should we contact about the grant award? -->
+      <h2 class="govuk-heading-m">Who should we contact about the grant award?</h2>
 
       {{ govukSummaryList({
         classes: "govuk-!-margin-bottom-9",
@@ -38,7 +38,7 @@
             actions: {
               items: [
                 {
-                  href: "/v1/contact-information",
+                  href: "/v1/who-should-we-contact-about-the-grant-award",
                   text: "Change",
                   visuallyHiddenText: "full name"
                 }
@@ -55,7 +55,7 @@
             actions: {
               items: [
                 {
-                  href: "/v1/contact-information",
+                  href: "/v1/who-should-we-contact-about-the-grant-award",
                   text: "Change",
                   visuallyHiddenText: "job title"
                 }
@@ -72,7 +72,7 @@
             actions: {
               items: [
                 {
-                  href: "/v1/contact-information",
+                  href: "/v1/who-should-we-contact-about-the-grant-award",
                   text: "Change",
                   visuallyHiddenText: "email address"
                 }
@@ -89,7 +89,7 @@
             actions: {
               items: [
                 {
-                  href: "/v1/contact-information",
+                  href: "/v1/who-should-we-contact-about-the-grant-award",
                   text: "Change",
                   visuallyHiddenText: "telephone number"
                 }
@@ -100,8 +100,8 @@
       }) }}
 
 
-      <!-- Organisation type -->
-      <h2 class="govuk-heading-m">Organisation details</h2>
+      <!-- Organisation -->
+      <h2 class="govuk-heading-m">Organisation</h2>
 
       {{ govukSummaryList({
         classes: 'govuk-!-margin-bottom-9',
@@ -162,8 +162,8 @@
       }) }}
 
 
-      <!-- Funding details -->
-      <h2 class="govuk-heading-m">Funding details</h2>
+      <!-- Funding -->
+      <h2 class="govuk-heading-m">Funding</h2>
 
       {{ govukSummaryList({
         classes: 'govuk-!-margin-bottom-9',
@@ -187,17 +187,17 @@
           },
           {
             key: {
-              text: "Name of scheme"
+              text: "Programme"
             },
             value: {
-              text: data["name-of-scheme"]
+              text: data["name-of-programme"]
             },
             actions: {
               items: [
                 {
                   href: "/v1/funding-details",
                   text: "Change",
-                  visuallyHiddenText: "name of scheme"
+                  visuallyHiddenText: "name of programme"
                 }
               ]
             }
