--- a/app/views/v1/organisation-type.html
+++ b/app/views/v1/organisation-type.html
@@ -24,7 +24,7 @@
 
     <p>The organisation must be a UK partner in the grant agreement.</p>
 
-    <p>If your organisation type is not listed, please select ‘Other’.</p>
+    <p>If your organisation type is not listed, select ‘Other’.</p>
 
     <form method="post">
 
