--- a/app/views/v1/what-programme-do-you-receive-funding-from.html
+++ b/app/views/v1/what-programme-do-you-receive-funding-from.html
@@ -40,47 +40,47 @@
           {
             value: "",
             text: "Europe for Citizens",
-            checked: checked('name-of-programme', 'Europe for Citizens')
+            checked: checked("name-of-programme", "Europe for Citizens")
           },
           {
             value: "Connecting Europe Facility, Telecoms (CEF)",
             text: "Connecting Europe Facility, Telecoms (CEF)",
-            checked: checked('name-of-programme', 'Connecting Europe Facility, Telecoms (CEF)')
+            checked: checked("name-of-programme", "Connecting Europe Facility, Telecoms (CEF)")
           },
           {
             value: "Creative Europe",
             text: "Creative Europe",
-            checked: checked('name-of-programme', 'Creative Europe')
+            checked: checked("name-of-programme", "Creative Europe")
           },
           {
             value: "Health for Growth",
             text: "Health for Growth",
-            checked: checked('name-of-programme', 'Health for Growth')
+            checked: checked("name-of-programme", "Health for Growth")
           },
           {
             value: "Employment and Social Innovation (EaSI)",
             text: "Employment and Social Innovation (EaSI)",
-            checked: checked('name-of-programme', 'Employment and Social Innovation (EaSI)')
+            checked: checked("name-of-programme", "Employment and Social Innovation (EaSI)")
           },
           {
             value: "RECP",
             text: "RECP",
-            checked: checked('name-of-programme', 'RECP')
+            checked: checked("name-of-programme", "RECP")
           },
           {
             value: "Erasmus+",
             text: "Erasmus+",
-            checked: checked('name-of-programme', 'Erasmus+')
+            checked: checked("name-of-programme", "Erasmus+")
           },
           {
             value: "European Solidarity Corps",
             text: "European Solidarity Corps",
-            checked: checked('name-of-programme', 'European Solidarity Corps')
+            checked: checked("name-of-programme", "European Solidarity Corps")
           },
           {
             value: "Competitiveness of Small and Medium-Sized Enterprises (COSME)",
             text: "Competitiveness of Small and Medium-Sized Enterprises (COSME)",
-            checked: checked('name-of-programme', 'Competitiveness of Small and Medium-Sized Enterprises (COSME)')
+            checked: checked("name-of-programme", "Competitiveness of Small and Medium-Sized Enterprises (COSME)")
           }
         ]
       }) }}
