--- a/app/views/v1/who-should-we-contact-about-the-grant-award.html
+++ b/app/views/v1/who-should-we-contact-about-the-grant-award.html
@@ -22,7 +22,7 @@
 
     <h1 class="govuk-heading-xl">Who should we contact about the grant award?</h1>
 
-    <p>We recommend your Legal Entity Appointed Representative (LEAR).</p>
+    <p>We suggest using your Legal Entity Appointed Representative (LEAR).</p>
 
     <form method="post">
 
