--- a/app/views/v1/index.html
+++ b/app/views/v1/index.html
@@ -70,7 +70,7 @@
       </ul>
 
       <p>If you do not have a grant agreement, fill in as much information as you can.</p>
-      <p>You’ll need to register again if you receive more than one fund.</p>
+      <p>You’ll need to register again if you receive funding from more than one programme.</p>
 
     </div>
 
