--- a/app/views/v1/check-your-answers.html
+++ b/app/views/v1/check-your-answers.html
@@ -241,7 +241,7 @@
               text: "Start date"
             },
             value: {
-              html: data["project-start-date-day"] + " " + data["project-start-date-month"] + " " + data["project-start-date-year"]
+              text: (data["start-date-year"] + "-" + data["start-date-month"] + "-" + data["start-date-day"]) | govDate
             },
             actions: {
               items: [
@@ -258,7 +258,7 @@
               text: "End date"
             },
             value: {
-              html: data["project-end-date-day"] + " " + data["project-end-date-month"] + " " + data["project-end-date-year"]
+              text: (data["end-date-year"] + "-" + data["end-date-month"] + "-" + data["end-date-day"]) | govDate
             },
             actions: {
               items: [
