--- a/app/views/v1/confirmation.html
+++ b/app/views/v1/confirmation.html
@@ -2,7 +2,7 @@
 
 
 {% block pageTitle %}
-  Confirmation - GOV.UK
+  Registration complete - GOV.UK
 {% endblock %}
 
 
@@ -19,20 +19,21 @@
   <div class="govuk-grid-row">
 
     <div class="govuk-grid-column-two-thirds">
+
       {{ govukPanel({
-        titleText: "Application complete",
+        titleText: "Registration complete",
         html: "Your reference number<br><strong>HDJ2123F</strong>"
       }) }}
 
-      <p class="govuk-body">We have sent you a confirmation email.</p>
+      <p>We have sent you a confirmation email.</p>
 
       <h2 class="govuk-heading-m">What happens next</h2>
 
-      <p class="govuk-body">We’ve sent your application to Cabinet Office Grants Management Function.</p>
+      <p>We’ve sent your details to the government department responsible for the fund you’ve said you receive.</p>
 
-      <p class="govuk-body">They will contact you either to confirm your registration, or to ask for more information.</p>
+      <p>Because: Information from the submitted form will go directly to the dept looking after that EU funding not Cabinet Office.</p>
 
-      <p class="govuk-body"><a href="#" class="govuk-link">What did you think of this service?</a> (takes 30 seconds)</p>
+      <p><a href="#" class="govuk-link">What did you think of this service?</a> (takes 30 seconds)</p>
 
     </div>
 
