--- a/app/views/v1/what-programme-do-you-receive-funding-from.html
+++ b/app/views/v1/what-programme-do-you-receive-funding-from.html
@@ -38,14 +38,19 @@
         },
         items: [
           {
-            value: "",
-            text: "Europe for Citizens",
-            checked: checked("name-of-programme", "Europe for Citizens")
+            value: "Civil Protection Mechanism",
+            text: "Civil Protection Mechanism",
+            checked: checked("name-of-programme", "Civil Protection Mechanism")
           },
           {
-            value: "Connecting Europe Facility, Telecoms (CEF)",
-            text: "Connecting Europe Facility, Telecoms (CEF)",
-            checked: checked("name-of-programme", "Connecting Europe Facility, Telecoms (CEF)")
+            value: "Competitiveness of Small and Medium-Sized Enterprises (COSME)",
+            text: "Competitiveness of Small and Medium-Sized Enterprises (COSME)",
+            checked: checked("name-of-programme", "Competitiveness of Small and Medium-Sized Enterprises (COSME)")
+          },
+          {
+            value: "Connecting Europe Facility (CEF) telecoms",
+            text: "Connecting Europe Facility (CEF) telecoms",
+            checked: checked("name-of-programme", "Connecting Europe Facility (CEF) telecoms")
           },
           {
             value: "Creative Europe",
@@ -53,19 +58,9 @@
             checked: checked("name-of-programme", "Creative Europe")
           },
           {
-            value: "Health for Growth",
-            text: "Health for Growth",
-            checked: checked("name-of-programme", "Health for Growth")
-          },
-          {
             value: "Employment and Social Innovation (EaSI)",
             text: "Employment and Social Innovation (EaSI)",
             checked: checked("name-of-programme", "Employment and Social Innovation (EaSI)")
-          },
-          {
-            value: "RECP",
-            text: "RECP",
-            checked: checked("name-of-programme", "RECP")
           },
           {
             value: "Erasmus+",
@@ -73,14 +68,24 @@
             checked: checked("name-of-programme", "Erasmus+")
           },
           {
+            value: "Europe for Citizens",
+            text: "Europe for Citizens",
+            checked: checked("name-of-programme", "Europe for Citizens")
+          },
+          {
             value: "European Solidarity Corps",
             text: "European Solidarity Corps",
             checked: checked("name-of-programme", "European Solidarity Corps")
           },
           {
-            value: "Competitiveness of Small and Medium-Sized Enterprises (COSME)",
-            text: "Competitiveness of Small and Medium-Sized Enterprises (COSME)",
-            checked: checked("name-of-programme", "Competitiveness of Small and Medium-Sized Enterprises (COSME)")
+            value: "Health for Growth",
+            text: "Health for Growth",
+            checked: checked("name-of-programme", "Health for Growth")
+          },
+          {
+            value: "Rights, Equality, and Citizenship Programme (RECP)",
+            text: "Rights, Equality, and Citizenship Programme (RECP)",
+            checked: checked("name-of-programme", "Rights, Equality, and Citizenship Programme (RECP)")
           }
         ]
       }) }}
