--- a/app/views/v1/confirmation.html
+++ b/app/views/v1/confirmation.html
@@ -25,7 +25,7 @@
         html: "Your reference number<br><strong>HDJ2123F</strong>"
       }) }}
 
-      <p>We have sent you a confirmation email.</p>
+      <p>We have sent a confirmation email to the address you gave.</p>
 
       <h2 class="govuk-heading-m">What happens next</h2>
 
