--- a/app/views/v1/project-details.html
+++ b/app/views/v1/project-details.html
@@ -38,16 +38,16 @@
         value: data['project-name']
       }) }}
 
-      <!-- Total amount awarded to your project in euros -->
+      <!-- Total amount awarded to your organisation in euros -->
       {{ govukInput({
         label: {
-          text: "Total amount awarded to your project in euros",
+          text: "Total amount awarded to your organisation in euros",
           classes: "govuk-label--s"
         },
         classes: "govuk-input--width-10",
-        id: "funding-contribution",
-        name: "funding-contribution",
-        value: data['funding-contribution']
+        id: "total-amount-awarded",
+        name: "total-amount-awarded",
+        value: data['total-amount-awarded']
       }) }}
 
       <!-- Start date -->
