--- a/app/views/v1/confirmation.html
+++ b/app/views/v1/confirmation.html
@@ -6,14 +6,6 @@
 {% endblock %}
 
 
-{% block beforeContent %}
-{{ govukBackLink({
-  text: "Back",
-  href: "/v1/check-your-answers"
-}) }}
-{% endblock %}
-
-
 {% block content %}
 
   <div class="govuk-grid-row">
@@ -22,7 +14,7 @@
 
       {{ govukPanel({
         titleText: "Registration complete",
-        html: "Your reference number<br><strong>HDJ2123F</strong>"
+        html: "Your reference number<br><strong>00000000</strong>"
       }) }}
 
       <p>We have sent a confirmation email to the address you gave.</p>
@@ -31,7 +23,7 @@
 
       <p>We’ve sent your details to the government department responsible for the fund you’ve said you receive.</p>
 
-      <p>Because: Information from the submitted form will go directly to the dept looking after that EU funding not Cabinet Office.</p>
+      <p>They will contact you either to confirm your registration, or to ask for more information.</p>
 
       <p><a href="#" class="govuk-link">What did you think of this service?</a> (takes 30 seconds)</p>
 
