--- a/app/views/v1/index.html
+++ b/app/views/v1/index.html
@@ -80,7 +80,7 @@
         <h2 class="govuk-heading-m" id="subsection-title">Related content</h2>
         <nav role="navigation" aria-labelledby="subsection-title">
           <ul class="govuk-list govuk-!-font-size-16">
-            <li><a href="/v1/recipient-registration-faq">Frequently Asked Questions</a></li>
+            <!--li><a href="/v1/recipient-registration-faq">Frequently Asked Questions</a></li-->
             <li><a href="https://www.gov.uk/government/publications/european-union-funding">European Union funding</a></li>
           </ul>
         </nav>
