--- a/app/views/v1/recipient-registration-faq.html
+++ b/app/views/v1/recipient-registration-faq.html
@@ -11,18 +11,11 @@
     items: [
       {
         text: "Home",
-        href: "#"
+        href: "https://www.gov.uk"
       },
       {
         text: "Funding programmes",
-        href: "#"
-      },
-      {
-        text: "EU Direct Bid funds",
-        href: "/v1"
-      },
-      {
-        text: "Frequently asked questions"
+        href: "https://www.gov.uk/topic/government/government-funding-programmes"
       }
     ]
   }) }}
