--- a/app/views/v1/what-is-the-grant-agreement-number.html
+++ b/app/views/v1/what-is-the-grant-agreement-number.html
@@ -2,7 +2,7 @@
 
 
 {% block pageTitle %}
-  What is the grant agreement number - GOV.UK
+  Do you have a grant agreement number? - GOV.UK
 {% endblock %}
 
 
@@ -20,21 +20,37 @@
 
   <div class="govuk-grid-column-two-thirds">
 
-    <h1 class="govuk-heading-xl">What is the grant agreement number?</h1>
-
-    <p>If you do not have a grant agreement number, select next.</p>
+    <h1 class="govuk-heading-xl">Do you have a grant agreement number?</h1>
 
     <form method="post">
 
-      {{ govukInput({
-        label: {
-          text: "Grant agreement number",
-          classes: "govuk-label--s govuk-visually-hidden"
-        },
-        classes: "govuk-input--width-20",
-        id: "grant-agreement-number",
-        name: "grant-agreement-number",
-        value: data['grant-agreement-number']
+      {% set grantAgreementNumber %}
+        {{ govukInput({
+          id: "grant-agreement-number",
+          name: "grant-agreement-number",
+          label: {
+            text: "Enter your grant agreement number"
+          },
+          classes: "govuk-!-width-two-thirds"
+        }) }}
+      {% endset -%}
+
+      {{ govukRadios({
+        idPrefix: "do-you-have-a-grant-agreement-number",
+        name: "do-you-have-a-grant-agreement-number",
+        items: [
+          {
+            value: "yes",
+            html: 'Yes<span class=\"govuk-visually-hidden">, we have a grant agreement number</span>',
+            conditional: {
+              html: grantAgreementNumber
+            }
+          },
+          {
+            value: "no",
+            html: 'No<span class="govuk-visually-hidden">, we don’t have a grant agreement number</span>'
+          }
+        ]
       }) }}
 
       {{ govukButton({
