--- a/app/views/v1/confirmation.html
+++ b/app/views/v1/confirmation.html
@@ -21,7 +21,9 @@
 
       <h2 class="govuk-heading-m">What happens next</h2>
 
-      <p>We’ve sent your details to the government department responsible for the fund you’ve said you receive.</p>
+      <p>We will send your details to the government department responsible for the fund you’ve said you receive.</p>
+
+      <!--p>We’ve sent your details to the government department responsible for the fund you’ve said you receive.</p-->
 
       <p>They will contact you either to confirm your registration, or to ask for more information.</p>
 
