--- a/app/views/v1/index.html
+++ b/app/views/v1/index.html
@@ -72,6 +72,10 @@
       <p>If you do not have a grant agreement, fill in as much information as you can.</p>
       <p>You’ll need to register again if you receive funding from more than one programme.</p>
 
+      <h2 class="govuk-heading-m">Privacy</h2>
+
+      <p>Read the <a href="https://www.gov.uk/government/publications/privacy-notice-for-grants-management-function-recipient-registration">privacy notice</a> for registration.</p>
+
     </div>
 
     <div class="govuk-grid-column-one-third">
