--- a/app/views/v1/project-details.html
+++ b/app/views/v1/project-details.html
@@ -22,7 +22,7 @@
 
     <h1 class="govuk-heading-xl">Project details</h1>
 
-    <form method="post">
+    <form method="post" action="/v1/does-the-project-have-partners-or-participants-outside-the-uk">
 
       <!-- Name -->
       {{ govukInput({
@@ -106,9 +106,8 @@
         }]
       }) }}
 
-      <!-- Submit -->
       {{ govukButton({
-        text: "Next"
+        text: "Save and continue"
       }) }}
 
     </form>
